--- a/.gitignore
+++ b/.gitignore
@@ -1,40 +1,81 @@
 *.pydevproject
+
 .metadata
+
 .gradle
 bin/
 tmp/
+
 *.tmp
+
 *.bak
+
 *.swp
+
 *~.nib
-local.properties
+local
+.properties
+
 .settings/
+
 .loadpath
 
+
+
 # Eclipse Core
+
 .project
 
-# External tool builders
+
+
+# External tool 
+builders
 .externalToolBuilders/
 
+
+
 # Locally stored "Eclipse launch configurations"
+
 *.launch
 
+
+
 # CDT-specific
+
 .cproject
 
+
+
 # JDT-specific (Eclipse Java Development Tools)
+
 .classpath
 
+
+
 # PDT-specific
+
 .buildpath
 
-# sbteclipse plugin
+
+
+# sbteclipse
+plugin
 .target
 
-# TeXlipse plugin
+
+
+# TeXlipse
+plugin
 .texlipse
 
+
+
 #netbeans
+
 nbproject/
+
 build.xml
+
+
+#compiled java files
+*.class
